# football-manager-utils

./: README.md  flake.nix  football-manager-utils.cabal
exe/: Main.hs
exe/FM/: Attrs.hs  Data.hs  Import.hs  Maths.hs  Position.hs  Roles.hs
exe/FM/Import/: Attrs.hs  League.hs  Shared.hs  Stats.hs
