cabal-version: 3.4
name: football-manager-utils
version: 0.1.0.0

executable football-manager-utils
    main-is: Main.hs
    hs-source-dirs: exe
    default-language: GHC2021
    ghc-options: -Wall
    default-extensions:
        LambdaCase
        OverloadedStrings
        RecordWildCards
    build-depends:
        base ^>=4.19.1.0,
        containers,
        optparse-applicative,
        text,
        xml
    other-modules:
        FM.Attrs
        FM.Import
        FM.Roles
